fix: title text overflow & empty data

--- a/css/highcharts-tree.scss
+++ b/css/highcharts-tree.scss
@@ -17,7 +17,6 @@ $highcharts-tree-connector-color: #bcbcbc !default; // connector.color
   font-size: 14px;
   color: $highcharts-tree-node-color;
   font-weight: bold;
-  text-overflow: ellipsis;
   text-align: center;
 }
 
